fix(subplebbit settings): read only description needed word wrap

--- a/src/views/subplebbit/subplebbit-settings/subplebbit-settings.module.css
+++ b/src/views/subplebbit/subplebbit-settings/subplebbit-settings.module.css
@@ -62,6 +62,7 @@
 .readOnlyDescription {
   font-size: 14px;
   font-family: verdana, arial, helvetica, sans-serif;
+  word-wrap: break-word;
   white-space: pre-wrap;
 }
 
